- server side pagination added - responsive css changes

--- a/src/components/Home/components/HomeFilter/styles.module.css
+++ b/src/components/Home/components/HomeFilter/styles.module.css
@@ -30,3 +30,9 @@
     background-color:#34d399;
     color: #fff;
 }
+
+@media (max-width: 768px) {
+    .container {
+        width: 90%;
+    }
+}
