--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     background-color: #d1fae5;
 }
 
@@ -20,4 +20,11 @@
     padding: 10px;
     height: 100%;
     gap: 10px;
+}
+
+@media (max-width: 768px) {
+    .body {
+        flex-direction: column;
+        align-items: center;
+    }
 }
