--- a/src/components/Home/components/HomeList/styles.module.css
+++ b/src/components/Home/components/HomeList/styles.module.css
@@ -42,6 +42,23 @@
   .pagination span {
     margin: 0 10px;
   }
+
+  .noHotelsMessage {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-self: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #34d399;
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px;
+    background-color:  #d1fae5; 
+    border: 1px solid  #d1fae5;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
   
   @media (max-width: 768px) {
     .container {
