--- a/src/components/Details/components/Info/styles.module.css
+++ b/src/components/Details/components/Info/styles.module.css
@@ -14,6 +14,7 @@
 .subContainer  {
     display: flex;
     align-items: baseline;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.35); 
     border-radius: 10px;
     padding: 14px;
